fix line spacing issue on publications page

--- a/css/secondary-page.styl
+++ b/css/secondary-page.styl
@@ -17,3 +17,6 @@
       font-size: 1.4em
       margin: 1.5em 0
       max-width: 700px
+
+  .publications-page
+    line-height: initial
